fixed bug in vhost template

--- a/templates/default/vhost.conf.erb
+++ b/templates/default/vhost.conf.erb
@@ -10,7 +10,7 @@
   <%- end -%>
 
 
-  Directory <%= File.join(@node[:apache][:apps_root], @dir_name, "public") %>>
+  <Directory <%= File.join(@node[:apache][:apps_root], @dir_name, "public") %> >
     AllowOverride All
   </Directory>
 
