--- a/templates/default/apache2.conf.erb
+++ b/templates/default/apache2.conf.erb
@@ -70,7 +70,7 @@ Timeout <%= @node[:apache][:timeout] %>
 # KeepAlive: Whether or not to allow persistent connections (more than
 # one request per connection). Set to "Off" to deactivate.
 #
-KeepAlive <%= @[:apache][:keep_alive] %>
+KeepAlive <%= @node[:apache][:keep_alive] %>
 
 #
 # MaxKeepAliveRequests: The maximum number of requests to allow
@@ -83,7 +83,7 @@ MaxKeepAliveRequests <%= @node[:apache][:max_keep_alive_requests] %>
 # KeepAliveTimeout: Number of seconds to wait for the next request from the
 # same client on the same connection.
 #
-KeepAliveTimeout <%= @[:apache][:keep_alive_timeout] %>
+KeepAliveTimeout <%= @node[:apache][:keep_alive_timeout] %>
 
 ##
 ## Server-Pool Size Regulation (MPM specific)
