--- a/templates/default/apache2.conf.erb
+++ b/templates/default/apache2.conf.erb
@@ -229,7 +229,7 @@ Include ports.conf
 #
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
-LogFormat "%h %l %u %t \"%r\" %>s %O" common
+LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 
